// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentPage .Markup <Column> renders 1`] = `
"<div className=\\"column\\">
  INSIDE COLUMN
</div>"
`;

exports[`ContentPage .Markup <Columns> renders 1`] = `
"<div className=\\"columns\\">
  INSIDE COLUMNS
</div>"
`;

exports[`ContentPage .Markup <Do> renders 1`] = `
"<Column>
  <div className=\\"do-header\\">
    <h2>
      Do
    </h2>
    <CheckIcon />
  </div>
  <div className=\\"do-section\\">
    THINGS TO DO
  </div>
</Column>"
`;

exports[`ContentPage .Markup <Dont> renders 1`] = `
"<Column>
  <div className=\\"dont-header\\">
    <h2>
      Don&#39;t
    </h2>
    <CrossIcon />
  </div>
  <div className=\\"dont-section\\">
    DON&#39;T DO THIS
  </div>
</Column>"
`;

exports[`ContentPage .Markup <Fail> renders 1`] = `
"<Column>
  <div className=\\"fail-header\\">
    <CrossIcon />
     
    <h3>
      Fail
    </h3>
  </div>
  <div className=\\"fail-section\\">
    I FAILED :(
  </div>
</Column>"
`;

exports[`ContentPage .Markup <HyperLink> renders 1`] = `
"<a href=\\"http://my.link\\" target=\\"_blank\\" onClick={[Function: onClick]}>
  LINK TEXT
</a>"
`;

exports[`ContentPage .Markup <LandmarkLegend> renders 1`] = `
"<span className=\\"landmarks-legend test-landmark\\">
  TEST
</span>"
`;

exports[`ContentPage .Markup <LandmarkLegend> renders 2`] = `
"<Column>
  <div className=\\"do-header\\">
    <h2>
      Do
    </h2>
    <CheckIcon />
  </div>
  <div className=\\"do-section\\">
    THINGS TO DO
  </div>
</Column>"
`;

exports[`ContentPage .Markup <Links> renders with many links 1`] = `
"<Fragment>
  <div>
    <HyperLink href=\\"about:blank\\">
      One
    </HyperLink>
  </div>
  <div>
    <HyperLink href=\\"about:blank\\">
      Two
    </HyperLink>
  </div>
  <div>
    <HyperLink href=\\"about:blank\\">
      Three
    </HyperLink>
  </div>
</Fragment>"
`;

exports[`ContentPage .Markup <Links> renders with one link 1`] = `
"<Fragment>
  <div>
    <HyperLink href=\\"about:blank\\">
      One
    </HyperLink>
  </div>
</Fragment>"
`;

exports[`ContentPage .Markup <Links> renders with text 1`] = `
"<Fragment>
  <div>
    Some text
  </div>
</Fragment>"
`;

exports[`ContentPage .Markup <Pass> renders 1`] = `
"<Column>
  <div className=\\"pass-header\\">
    <CheckIcon />
     
    <h3>
      Pass
    </h3>
  </div>
  <div className=\\"pass-section\\">
    I PASSED :)
  </div>
</Column>"
`;

exports[`ContentPage .Markup <PassFail> renders with example headers 1`] = `
"<div className=\\"pass-fail-grid\\">
  <div className=\\"fail-section\\">
    <div className=\\"fail-header\\">
      <CrossIcon />
       
      <h3>
        Fail
      </h3>
    </div>
    <p>
      I FAILED :(
    </p>
  </div>
  <div className=\\"fail-example\\">
    <CodeExample title=\\"How I failed\\">
      This is the failure [example].
    </CodeExample>
  </div>
  <div className=\\"pass-section\\">
    <div className=\\"pass-header\\">
      <CheckIcon />
       
      <h3>
        Pass
      </h3>
    </div>
    <p>
      I PASSED!
    </p>
  </div>
  <div className=\\"pass-example\\">
    <CodeExample title={{...}}>
      This is the passing [example].
    </CodeExample>
  </div>
</div>"
`;

exports[`ContentPage .Markup <PassFail> renders without example headers 1`] = `
"<div className=\\"pass-fail-grid\\">
  <div className=\\"fail-section\\">
    <div className=\\"fail-header\\">
      <CrossIcon />
       
      <h3>
        Fail
      </h3>
    </div>
    <p>
      I FAILED :(
    </p>
  </div>
  <div className=\\"fail-example\\">
    <CodeExample>
      This is the failure [example].
    </CodeExample>
  </div>
  <div className=\\"pass-section\\">
    <div className=\\"pass-header\\">
      <CheckIcon />
       
      <h3>
        Pass
      </h3>
    </div>
    <p>
      I PASSED!
    </p>
  </div>
  <div className=\\"pass-example\\">
    <CodeExample>
      This is the passing [example].
    </CodeExample>
  </div>
</div>"
`;

exports[`ContentPage .Markup <ProblemList> renders 1`] = `
"<ul className=\\"accessibility-problems-list\\">
  list contetn
</ul>"
`;

exports[`ContentPage .Markup <Table> renders 1`] = `
"<ul className=\\"table\\">
  table contetn
</ul>"
`;
